--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <h1>For Continue press CLICK! </h1>
+    <h1>For Continue press CLICK2! </h1>
     <a href="#" onmouseover="inputAge()" ;>CLICK!</a>
     <img src="arshak.jpeg" alt="" id="27" onclick="swap_image2(this,'1.jpg')" />
 
